--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -35,6 +35,7 @@ html {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: clip;
 }
 
 .section {
